[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Sky/Planet.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SphereMesh" id=3]
flip_faces = true
radius = 1.05
height = 2.1

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_disable_ambient_light = true
albedo_color = Color( 0.470588, 0.796078, 1, 0.266667 )

[sub_resource type="SphereMesh" id=4]
flip_faces = true
radius = 1.05
height = 2.1

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_disable_ambient_light = true
albedo_color = Color( 1, 0.341176, 0, 0.266667 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Camera" type="Camera" parent="MeshInstance"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 1.02141, 0, 8.92941e-08 )
fov = 70.5

[node name="Rotate" type="Timer" parent="."]

[node name="Orbit" type="Timer" parent="."]

[node name="MeshInstance2" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = SubResource( 2 )

[node name="AtmosphereBack" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0390331, 0.999238, 0, -0.999238, 0.0390331, 0, 0, 0 )
visible = false
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="SpotLight" type="SpotLight" parent="."]
visible = false
layers = 2
light_energy = 2.783
light_cull_mask = 4294966274
spot_range = 1.38289
spot_attenuation = 0.0507658
spot_angle = 110.05
spot_angle_attenuation = 0.707107

[connection signal="timeout" from="Rotate" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Orbit" to="." method="_on_Orbit_timeout"]
